# ossia-videoplayer

./: CMakeLists.txt  README.md
src/: Viewport.cpp  Viewport.h  main.cpp
